<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Fragments.FrgDatosPersona">

    <EditText
        android:id="@+id/edit_nombre"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/txtNombre"
        />

    <EditText
        android:id="@+id/edit_apellido"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/txtApellido"
        />
    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/txtEmail"
        />

    <EditText
        android:id="@+id/edit_telefono"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/txtTelefono"
        />

    <Button
        android:id="@+id/button_tomardatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEnvData"
        />

</LinearLayout>